CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MyProject)

SET(SRC_LIST main.c)
SET(SRC_LIST2 main2.c)

MESSAGE(STATUS "PROJECT_BINARY_DIR DIR" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "PROJECT_SOURCE_DIR DIR" ${PROJECT_SOURCE_DIR})

ADD_EXECUTABLE(curr ${SRC_LIST})
ADD_EXECUTABLE(curr2 ${SRC_LIST2})