CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SRC_LIST main.c)
SET(CMAKE_INSTALL_PREFIX /data/share/cmakelist)

MESSAGE(STATUS "MyProject TOP PROJECT_BINARY_DIR    ",${PROJECT_BINARY_DIR})
MESSAGE(STATUS "MyProject Top PROJECT_SOURCE_DIR    ",${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "MyProject Top CMAKE_CURRENT_SOURCE_DIR",${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(src)

INSTALL(DIRECTORY doc/ DESTINATION ${CMAKE_INSTALL_PREFIX}/1.1.2_doc)