CMAKE_MINIMUM_REQUIRED(VERSION 2.9)

PROJECT(MyProject)

SET(SRC_LIST main.c)

MESSAGE(STATUS "THIS IS BINARY DIR " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "THIS IS SOURCE DIR " ${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(lib)

# AUX_SOURCE_DIRECTORY(. DIR_SRCS)

# ADD_LIBRARY(dir1 SHARED ${DIR_SRCS})

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/lib")

LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/lib")

ADD_EXECUTABLE(MyProject ${SRC_LIST})

TARGET_LINK_LIBRARIES(MyProject Dir1)