CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SRC_LIST main.c)
SET(CMAKE_INSTALL_PREFIX /data/share/cmakelist)

MESSAGE(STATUS "MyProject SUB PROJECT_BINARY_DIR    ",${PROJECT_BINARY_DIR})
MESSAGE(STATUS "MyProject SUB PROJECT_SOURCE_DIR    ",${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "MyProject SUB CMAKE_CURRENT_SOURCE_DIR",${CMAKE_CURRENT_SOURCE_DIR})

# ADD_SUBDIRECTORY(src)

ADD_EXECUTABLE(youzi ${SRC_LIST})
ADD_EXECUTABLE(youzi2 ${SRC_LIST})

INSTALL(TARGETS youzi RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
INSTALL(TARGETS youzi2 RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

# INSTALL(DIRECTORY doc/ DESTINTION ${CMAKE_INSTALL_PREFIX}/1.1.2_doc)