CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MyProject)

if(${CMAKE_BUILD_TYPE} MATCHES "Release")
    MESSAGE(STATUS "Release版本")
    SET(BuildType "Release")
else()
    Message(STATUS "Debug版本")
    SET(BuildType "Debug")
endif()

SET(RELEASE_DIR ${PROJECT_SOURCE_DIR}/release)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/${BuildType})
ADD_COMPILE_OPTIONS(-fPIC)

AUX_SOURCE_DIRECTORY(. DIR_LIB_SRCS)

ADD_LIBRARY(Dir1 SHARED ${DIR_LIB_SRCS})
