CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MyProject)

SET(SRC_LIST main.c)
MESSAGE(STATUS "THIS IS BINARY DIR" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "THIS IS SOURCE DIR" ${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dir1")
INCLUDE_DIRECTORIES(dir1)
Message(STATUS "CMAKE_CURRENT_SOURCE_DIR ->" ${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/dir1")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dir2")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/dir2")

ADD_EXECUTABLE(MyProject ${SRC_LIST})
TARGET_LINK_LIBRARIES(MyProject dir1 dir2)

INSTALL(TARGETS MyProject RUNTIME DESTINATION bin)