CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MyProject)

SET(SRC_LIST main.c)
MESSAGE(STATUS "THIS IS BINARY DIR" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "THIS IS SOURCE DIR" ${PROJECT_SOURCE_DIR})

SET(SUB_DIR_LIST "${CMAKE_CURRENT_SOURCE_DIR}/dir1" "${CMAKE_CURRENT_SOURCE_DIR}/dir2")

FOREACH(SUB_DIR ${SUB_DIR_LIST})
    # add head file automentally
    INCLUDE_DIRECTORIES(${SUB_DIR})
    # retraver source file and add to sub_list
    AUX_SOURCE_DIRECTORY(${SUB_DIR} SRC_LIST)
    MESSAGE(STATUS "SUB_DIR -> " ${SUB_DIR})
    MESSAGE(STATUS "SUB_LIST -> " ${SRC_LIST})
ENDFOREACH()

ADD_EXECUTABLE(MyProject ${SRC_LIST})